--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<!DOCTYPE html><html><head><title>Vei :3</title><style>
-<h1> not putting anything here yet haha get TROLLED! </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF=8">
+  <meta name"viewport" content="width-device-width, initial-scale=1.0">
+  <title>Vei :3</title>
+</head>
+<body>
+<h1>i'm not putting anything here yet haha get TROLLED!</h1>
+</body>
+</html>
